# mox

./: .gitignore  AGENTS.md  README.md  TODO.md  dune-project  mox.sh  rfr.md
elimrel/: README.md  __init__.py  elimrel.py  helly_checker.py
elimrel/examples/: __init__.py  diff_constraints.html  diff_constraints.py  elimrel_full.html  elimrel_full.py  helly_violation.html  helly_violation.py  ineq_2.html  ineq_2.py  ineq_3.html  ineq_3.py  lambda_lock.html  lambda_lock.py  oxcaml.html  oxcaml.py  oxcaml_borrowing.html  oxcaml_borrowing.py  run_all.py  split.html  split.py  two_sat.html  two_sat.py
legacy/: typechecker_legacy.ml
playground/: README.md  app.js  dune  index.html  mox_playground.ml
scripts/: deploy_playground.sh
src/: ast.ml  dune  expect.ml  expect.mli  infsolver.ml  infsolver.mli  intsolver.ml  intsolver.mli  lexer.mll  modes.ml  modesolver.ml  modesolver.mli  parser.conflicts  parser.mly  pretty.ml  pretty.mli  relations.ml  relations.mli  typechecker.ml  typechecker_legacy.ml  typeinference.ml  typeinference.mli
tests/: comments.mox  dune  errors.mox  match.mox  modes_expect.ml
tests/expect/: dune  infsolver_expect.ml  modesolver_expect.ml
tests/mox/: borrowing.mox  bug.mox  codex.mox  contention.mox  core.mox  editor.mox  env_alias.mox  errors.mox  hole.mox  linearity.mox  locking.mox  locking_suite.mox  modes.mox  modes_additional.mox  modes_additional_full.mox  modes_additional_infer_crash.mox  playground.mox  ref_uniqueness.mox  regionality.mox  stack_alloc.mox
tex/: borrowing.tex  mox.tex  resolver.tex
(+36 files in other folders)
